@@ -100,6 +100,7 @@ static ExcelValue sumif(ExcelValue check_range_v, ExcelValue criteria_v, ExcelVa
 static ExcelValue sumif_2(ExcelValue check_range_v, ExcelValue criteria_v);
 static ExcelValue sumproduct(int number_of_arguments, ExcelValue *arguments);
 static ExcelValue text(ExcelValue number_v, ExcelValue format_v);
+static ExcelValue value(ExcelValue string_v);
 static ExcelValue vlookup_3(ExcelValue lookup_value_v,ExcelValue lookup_table_v, ExcelValue column_number_v);
 static ExcelValue vlookup(ExcelValue lookup_value_v,ExcelValue lookup_table_v, ExcelValue column_number_v, ExcelValue match_type_v);
 
@@ -2090,4 +2091,12 @@ static ExcelValue hlookup(ExcelValue lookup_value_v,ExcelValue lookup_table_v, E
     return array[((((int) row_number_v.number)-1)*columns)+(last_good_match)];
   }
   return NA;
+}
+
+
+static ExcelValue value(ExcelValue string_v) {
+	CHECK_FOR_PASSED_ERROR(string_v)
+	NUMBER(string_v, a)
+	CHECK_FOR_CONVERSION_ERROR
+	return new_excel_number(a);
 }
