@@ -106,3 +106,5 @@ require_relative 'excel_functions/averageifs'
 require_relative 'excel_functions/forecast'
 
 require_relative 'excel_functions/ensure_is_number'
+
+require_relative 'excel_functions/value'
