@@ -1,0 +1,7 @@
+module ExcelFunctions
+  
+  def value(a)
+     number_argument(a)
+  end
+  
+end
